--- a/views/entry_template.html
+++ b/views/entry_template.html
@@ -1,44 +1,14 @@
-<!doctype HTML>
-<html>
-<head>
-<title>Hot Blog</title>
-<link rel="stylesheet" href="/css/bootstrap.css">
-</head>
-<body>
-<nav class="navbar-inverse">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Hot Blog</a>
-    </div>
-    <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            {% if username %}
-            <li><a>Welcome {{username}}</a></li>        <li><a href="/logout">Logout</a> <li><a href="/newpost">New Post</a></li></li>
-            {% else %}
-            <li><a>You are not logged in!</a></li>        <li><a href="/login">Login</a></li> <li><a href="/signup">Sign Up</a></li>
-            {% endif %}
-        </ul>
-    </div><!--/.nav-collapse -->
-</nav>
+{% extends "blog_template.html" %}
+{% block body %}
 
 <h2>{{post['title']}}</h2>
-Posted {{post['date']}}<i> By {{post['author']}}</i><br>
+Postado {{post['date']|date('d-m-Y') }}<i> Por {{post['author']}}</i><br>
 <hr>
 {% autoescape false %}
 {{post['body']}}
 {% endautoescape %}
 <p>
-<em>Filed Under</em>:
+<em>Filtros: </em>:
 {% for tag in post.tags %}
     {% if loop.first %}
         <a href="/tag/{{tag}}">{{tag}}</a>
@@ -47,14 +17,14 @@ Posted {{post['date']}}<i> By {{post['author']}}</i><br>
     {% endif %}
 {% endfor %}
 <p>
-Comments:
+Comentários:
 <ul>
 {% for comment in post.comments %}
 Author: {{comment['author']}}<br>
 {{comment['body']}}<br>
 <hr>
 {% endfor %}
-<h3>Add a comment</h3>
+<h3>Quer Comentar?</h3>
 <form action="/newcomment" method="POST">
 <input type="hidden" name="permalink", value="{{post['permalink']}}">
 <h4>{{errors}}</h4>
@@ -67,8 +37,6 @@ Author: {{comment['author']}}<br>
 <input type="submit" value="Submit">
 </ul>
 
-<script type="text/javascript" src="/js/bootstrap.js" />
-</body>
-</html>
+{% endblock %}
 
 
