--- a/views/login.html
+++ b/views/login.html
@@ -17,8 +17,8 @@
         <label class="alert-danger">{{login_error}}</label>
 
         <div class="form-group">
-            <a class="btn btn-danger"  href="/">Voltar</a>
-            <button type="submit" class="btn btn-success">Logar</button>
+            <a class="btn btn-danger"  href="/"><i class="fa fa-reply"></i>&nbsp;Voltar</a>
+            <button type="submit" class="btn btn-success"><i class="fa fa-check"></i>&nbsp;Logar</button>
         </div>
     </form>
 {% endblock %}
