--- a/views/newpost_template.html
+++ b/views/newpost_template.html
@@ -23,8 +23,8 @@
     </div>
 
     <div class="form-group">
-        <a class="btn btn-danger" href="/">Voltar</a>
-        <button type="submit" class="btn btn-success">Salvar</button>
+        <a class="btn btn-danger" href="/"><i class="fa fa-reply"></i>&nbsp;Voltar</a>
+        <button type="submit" class="btn btn-success"><i class="fa fa-check"></i>&nbsp;Salvar</button>
     </div>
 
 {% endblock %}
