--- a/views/signup.html
+++ b/views/signup.html
@@ -26,8 +26,8 @@
             <label class="alert-danger">{{email_error}}</label>
         </div>
         <div class="form-group">
-            <a class="btn btn-danger"  href="/">Voltar</a>
-            <button type="submit" class="btn btn-success">Registrar</button>
+            <a class="btn btn-danger"  href="/"><i class="fa fa-reply"></i>&nbsp;Voltar</a>
+            <button type="submit" class="btn btn-success"><i class="fa fa-sign-in"></i>&nbsp;Registrar</button>
         </div>
     </form>
 {% endblock %}
