--- a/views/error_template.html
+++ b/views/error_template.html
@@ -1,12 +1,8 @@
-<!doctype HTML>
-<html>
-<head>
-<title>Internal Error</title>
-</head>
-<body>
+{% extends "blog_template.html" %}
+{% block body %}
 
 Oops..<br>
 {{error}}
-</body>
-</html>
+
+{% endblock %}
 
